# it-322-penetration-testing

./: README.md  open_port_scanning.sh  open_port_scanning2.sh  pokemon_api.py  pyproject.toml
