[tool.poetry]
name = "it-322-penetration-testing"
version = "0.1.0"
description = ""
authors = ["airsalvatierra <air.salvatierra@gmail.com>"]
readme = "README.md"
packages = [{include = "it_322_penetration_testing"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
